[tool.poetry]
name = "biopython-research"
version = "0.1.0"
description = ""
authors = ["Aigul Khakimova <aigul03.14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"
ipykernel = "^6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
